[tool.poetry]
name = "linkedin-autopost"
version = "0.1.0"
description = ""
authors = ["NineCloud <gabrielarlo11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
openai = "^1.13.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
